fix accidental frog on fire crouch

--- a/mario.html
+++ b/mario.html
@@ -75,10 +75,10 @@
   .mario.frog.jumping, .mario.frog.crouching {
       width: 40px;
   }
-  .mario.frog.standing.left, .mario.crouching.fire.left {
+  .mario.frog.standing.left {
     background-position:-274px -1072px;
   }
-  .mario.frog.standing.right, .mario.crouching.fire.right {
+  .mario.frog.standing.right {
     background-position:-352px -1070px;
   }
   .mario.frog.walking.right {
